examples/01-simple-httpd/kubernetes/01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ssc-01-simple-nginx-service
spec:
  selector:
    app: stevens-simple-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
