examples/01-simple-httpd/kubernetes/01-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssc-01-simple-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: cxp.k8s.azure.msgoat.eu
    http:
      paths:
      - path: /cxp-team-heiterbiswolkig/ssc-01-simple-nginx(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ssc-01-simple-nginx-service
            port:
              number: 80
